--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 click==7.1.2
 cycler==0.10.0
+IP2Location==8.6.0
 kiwisolver==1.3.1
 matplotlib==3.4.1
+mongoengine==0.23.1
 numpy==1.20.2
 pandas==1.2.4
 Pillow==8.2.0
+pkg-resources==0.0.0
+pydot==1.4.2
 pygeoip==0.3.2
+pymongo==3.11.4
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
