--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pylint = "^2.11.1"
 autopep8 = "^1.6.0"
 tqdm = "^4.62.3"
 mypy = "^0.931"
+ipykernel = "^6.9.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
