--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,26 @@
 [tool.poetry]
-name = "logs_parser"
+name = "logsparser"
 version = "0.1.0"
-description = "logs parser for web analitics"
+description = ""
 authors = ["DieNice <DailyPlanning@bk.ru>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-IP2Location = "^8.6.2"
-mongoengine = "^0.23.1"
-matplotlib = "^3.4.3"
-pandas = "^1.3.3"
-Pillow = "^8.4.0"
-PyQt5 = "^5.15.4"
-click = "^8.0.3"
+python = "^3.10"
+ip2location = "^8.10.0"
+pandas = "^2.0.3"
+pillow = "^10.0.0"
+click = "^8.1.4"
+matplotlib = "^3.7.2"
+requests = "^2.31.0"
 
 
-[tool.poetry.dev-dependencies]
-ipython = "^7.29.0"
-pylint = "^2.11.1"
-autopep8 = "^1.6.0"
-tqdm = "^4.62.3"
-mypy = "^0.931"
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.17.4"
+autopep8 = "^2.0.2"
+tqdm = "^4.65.0"
+mypy = "^1.4.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
