--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pillow = "^10.0.0"
 click = "^8.1.4"
 matplotlib = "^3.7.2"
 requests = "^2.31.0"
+tqdm = "^4.65.0"
 
 
 [tool.poetry.group.dev.dependencies]
